--- a/src/main.scss
+++ b/src/main.scss
@@ -5,5 +5,7 @@
 @import "./components/Footer/footer";
 @import "./components/Header/header";
 @import "./components/About/about";
+@import "./components/Projects/projects";
+@import "./components/Contact/contact";
 
 @import "./components/Fragments/pageheading";
