--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -18,21 +18,25 @@
                 "card1"
                 "card2"
                 "card3"
-                "card4";
+                "card4"
+                "card5"
+                "card6";
         }
         @include mediaSmMin {
             padding: 2rem 4rem;
             grid-template-columns: repeat(3, 1fr);
             grid-template-areas:
                 "primary primary card0"
-                "card1 card2 card3";
+                "card1 card2 card3"
+                "card4 card5 card6";
         }
         @include mediaLgMin {
             padding: 2rem 10%;
             grid-template-columns: repeat(4, 1fr);
             grid-template-areas:
                 "primary primary card0 card1"
-                "card2 card3 card4 card5";
+                "card2 card3 card4 card5"
+                "card6";
         }
 
         .aboutCard {
@@ -60,7 +64,7 @@
             .aboutCardTitleBox {
                 width: 100%;
                 padding-top: 1rem;
-                height: 3rem;
+                height: 4rem;
 
                 i {
                     margin-right: 0.5rem;
